[package]
name = "spiderdb"
version = "0.1.0"
authors = ["caojiafeng"]

[dependencies]
skiplist = "0.2.10"
threadpool = "1.7.1"
crossbeam = "0.3.2"
memmap = "0.6.2"
byteorder = "1.2.2"
bytes = "0.4"
serde = "1.0.38"
serde_derive = "1.0.38"
bincode = "1.0.0"
failure = "0.1.1"
tempdir = "0.3.7"
crc = "1.7.0"

[dev-dependencies.rand]
version = "0.4.2"
